--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,3 @@
-MONGO_URI=<YOUR MONGODB CONNECTION STRING>
+MONGO_URI=mongodb+srv://Deep123:Deep123@cluster0.uqdsnba.mongodb.net/holidayplanner?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=2J8zqkP7VN6bxzg+Wy7DQZsd3Yx8mF3Bl0kch6HYtFs=
 PORT=5001
