--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Task Manager Team",
   "license": "ISC",
   "dependencies": {
+    "18": "^0.0.0",
+    "axios": "^1.8.4",
     "mongodb": "^6.15.0"
   }
 }
