--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "mocha --timeout 10000",
     "start": "node server.js",
+    "build": "echo 'Backend build completed'",
     "dev": "nodemon server.js",
     "prod": "node server.js"
   },
