--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Set up Node.js
+    - name: Set up Node.js for Backend
       uses: actions/setup-node@v3
       with:
         node-version: '18'
         cache: 'npm'
+        cache-dependency-path: 'backend/package-lock.json'
     
     - name: Install Backend Dependencies
       run: |
@@ -32,6 +33,13 @@ jobs:
         MONGO_URI: ${{ secrets.MONGO_URI }}
         JWT_SECRET: ${{ secrets.JWT_SECRET }}
         PORT: ${{ secrets.PORT }}
+    
+    - name: Set up Node.js for Frontend
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        cache: 'npm'
+        cache-dependency-path: 'frontend/package-lock.json'
     
     - name: Install Frontend Dependencies
       run: |
