--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "mocha": "^10.2.0",
     "nodemon": "^3.1.9",
     "sinon": "^15.0.3"
