--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,15 +33,23 @@ jobs:
           npm ci
           echo "Backend dependencies installed successfully"
 
+      - name: Create .env file for testing
+        working-directory: backend
+        run: |
+          echo "MONGO_URI=mongodb://localhost:27017/holidayplanner-test" > .env.test
+          echo "JWT_SECRET=test-secret-key" >> .env.test
+          echo "PORT=5000" >> .env.test
+          echo "NODE_ENV=test" >> .env.test
+
       - name: Run backend tests
         working-directory: backend
         run: |
           echo "Running backend tests..."
-          npm test
+          NODE_ENV=test npm test
         env:
-          MONGO_URI: ${{ secrets.MONGO_URI }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          PORT: ${{ secrets.PORT }}
+          MONGO_URI: mongodb://localhost:27017/holidayplanner-test
+          JWT_SECRET: test-secret-key
+          PORT: 5000
           NODE_ENV: test
 
       - name: Setup Node.js for Frontend
@@ -63,7 +71,7 @@ jobs:
           echo "Building frontend..."
           npm run build
         env:
-          REACT_APP_API_URL: http://localhost:${{ secrets.PORT }}
+          REACT_APP_API_URL: http://localhost:5000
 
   build:
     needs: test
