Add CI workflow with test and build jobs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,10 @@ on:
     branches:
       - main
       - develop
-      - holidayfeatures
   pull_request:
     branches:
       - main
       - develop
-      - holidayfeatures
 
 jobs:
   test:
@@ -20,12 +18,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js for Backend
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: 'backend/package-lock.json'
 
       - name: Install backend dependencies
         working-directory: backend
@@ -33,31 +30,16 @@ jobs:
           npm ci
           echo "Backend dependencies installed successfully"
 
-      - name: Create .env file for testing
-        working-directory: backend
-        run: |
-          echo "MONGO_URI=mongodb://localhost:27017/holidayplanner-test" > .env.test
-          echo "JWT_SECRET=test-secret-key" >> .env.test
-          echo "PORT=5000" >> .env.test
-          echo "NODE_ENV=test" >> .env.test
-
       - name: Run backend tests
         working-directory: backend
         run: |
           echo "Running backend tests..."
-          NODE_ENV=test npm test
+          npm test
         env:
-          MONGO_URI: mongodb://localhost:27017/holidayplanner-test
-          JWT_SECRET: test-secret-key
-          PORT: 5000
+          MONGO_URI: ${{ secrets.MONGO_URI }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          PORT: ${{ secrets.PORT }}
           NODE_ENV: test
-
-      - name: Setup Node.js for Frontend
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: 'frontend/package-lock.json'
 
       - name: Install frontend dependencies
         working-directory: frontend
@@ -71,7 +53,7 @@ jobs:
           echo "Building frontend..."
           npm run build
         env:
-          REACT_APP_API_URL: http://localhost:5000
+          REACT_APP_API_URL: http://localhost:${{ secrets.PORT }}
 
   build:
     needs: test
@@ -82,12 +64,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js for Backend
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: 'backend/package-lock.json'
 
       - name: Build backend
         working-directory: backend
@@ -98,13 +79,7 @@ jobs:
           MONGO_URI: ${{ secrets.MONGO_URI }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           PORT: ${{ secrets.PORT }}
-
-      - name: Setup Node.js for Frontend
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: 'frontend/package-lock.json'
+          NODE_ENV: production
 
       - name: Build frontend
         working-directory: frontend
