Update test configuration and add environment variable checks

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,6 +12,7 @@ jobs:
     name: Deploy to Staging
     if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'develop' }}
     runs-on: ubuntu-latest
+    environment: staging
     steps:
       - uses: actions/checkout@v3
         with:
@@ -22,17 +23,17 @@ jobs:
         with:
           node-version: '18'
           
-      - name: Install Dependencies
-        run: |
-          cd backend
-          npm ci
-          cd ../frontend
-          npm ci
+      - name: Install Backend Dependencies
+        working-directory: ./backend
+        run: npm ci
+        
+      - name: Install Frontend Dependencies
+        working-directory: ./frontend
+        run: npm ci
           
-      - name: Build for Production
-        run: |
-          cd frontend
-          npm run build
+      - name: Build Frontend
+        working-directory: ./frontend
+        run: npm run build
           
       - name: Deploy to Staging Server
         uses: appleboy/ssh-action@master
@@ -41,32 +42,28 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd /var/www/holidayplanner
+            cd /var/www/taskmanager
             git pull origin develop
             cd backend
             npm ci
-            pm2 restart holidayplanner-api
+            pm2 restart taskmanager-api
             cd ../frontend
             npm ci
             npm run build
             
-      - name: Run Integration Tests in Staging
-        run: |
-          echo "Running integration tests in staging environment"
-          # Add your integration test commands here
-          
-      - name: Run Performance Tests
-        run: |
-          echo "Running performance tests in staging environment"
-          # Add your performance test commands here
+      - name: Run Integration Tests
+        working-directory: ./backend
+        run: npm test
+        env:
+          MONGO_URI: ${{ secrets.MONGO_URI }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          NODE_ENV: staging
           
   deploy-production:
     name: Deploy to Production
     if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
     runs-on: ubuntu-latest
-    environment:
-      name: production
-      url: http://13.236.135.130/
+    environment: production
     steps:
       - uses: actions/checkout@v3
         with:
@@ -77,17 +74,17 @@ jobs:
         with:
           node-version: '18'
           
-      - name: Install Dependencies
-        run: |
-          cd backend
-          npm ci
-          cd ../frontend
-          npm ci
+      - name: Install Backend Dependencies
+        working-directory: ./backend
+        run: npm ci
+        
+      - name: Install Frontend Dependencies
+        working-directory: ./frontend
+        run: npm ci
           
-      - name: Build for Production
-        run: |
-          cd frontend
-          npm run build
+      - name: Build Frontend
+        working-directory: ./frontend
+        run: npm run build
           
       - name: Prepare Blue Deployment
         uses: appleboy/ssh-action@master
@@ -96,7 +93,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            mkdir -p /var/www/holidayplanner-blue
+            mkdir -p /var/www/taskmanager-blue
             
       - name: Deploy to Blue Environment
         uses: appleboy/ssh-action@master
@@ -105,7 +102,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd /var/www/holidayplanner-blue
+            cd /var/www/taskmanager-blue
             git pull origin main
             cd backend
             npm ci
@@ -121,16 +118,16 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /var/www
-            rm -rf holidayplanner-green
-            mv holidayplanner holidayplanner-green
-            mv holidayplanner-blue holidayplanner
-            cd holidayplanner/backend
-            pm2 restart holidayplanner-api
+            rm -rf taskmanager-green
+            mv taskmanager taskmanager-green
+            mv taskmanager-blue taskmanager
+            cd taskmanager/backend
+            pm2 restart taskmanager-api
             
       - name: Verify Deployment
         run: |
           echo "Verifying deployment..."
-          curl -sSf http://13.236.135.130/ || (echo "Deployment verification failed, rolling back" && exit 1)
+          curl -sSf http://${{ secrets.PRODUCTION_HOST }}/health || (echo "Deployment verification failed, rolling back" && exit 1)
           
       - name: Rollback on Failure
         if: failure()
@@ -141,8 +138,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /var/www
-            rm -rf holidayplanner-blue
-            mv holidayplanner holidayplanner-blue
-            mv holidayplanner-green holidayplanner
-            cd holidayplanner/backend
-            pm2 restart holidayplanner-api 
+            rm -rf taskmanager-blue
+            mv taskmanager taskmanager-blue
+            mv taskmanager-green taskmanager
+            cd taskmanager/backend
+            pm2 restart taskmanager-api 
