--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "holiday-planner-backend",
+  "name": "task-manager-backend",
   "version": "1.0.0",
-  "description": "Backend service for Holiday Planner application",
+  "description": "Backend for Task Manager App",
   "main": "server.js",
   "scripts": {
+    "test": "mocha test/server.test.js --exit",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "mocha --exit"
+    "prod": "node server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^3.0.2",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
-    "swagger-ui-express": "^5.0.0",
-    "yamljs": "^0.3.0"
+    "dotenv": "^10.0.0",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.13.8",
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "chai": "^4.3.7",
-    "chai-http": "^4.3.0",
-    "mocha": "^10.2.0",
-    "nodemon": "^3.1.9",
-    "sinon": "^15.0.3"
+    "chai": "^5.2.0",
+    "esm": "^3.2.25",
+    "mocha": "^11.1.0",
+    "nodemon": "^2.0.15",
+    "sinon": "^19.0.5",
+    "supertest": "^7.1.0"
   },
   "author": "Task Manager Team",
   "license": "ISC"
